fixed text on mobile mode

--- a/src/styles/Title.css
+++ b/src/styles/Title.css
@@ -5,6 +5,7 @@
 .title{
     display: flex;
     flex-direction: column;
+    min-height: 90px;
 }
 
 .main-title-text{
@@ -25,6 +26,7 @@
     .main-title-text{
         font-size: 1.5em;
     }
+
 }
 @media (min-width: 800px) {
     .main-title-text{
